objects/Product_Transformation_Table__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look Up with Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products Transformation Table</relationshipLabel>
        <relationshipName>Products_Transformation_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ori_Plast_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ori-Plast Product</label>
        <referenceTo>OriPlast_Product__c</referenceTo>
        <relationshipLabel>Products Transformation Table</relationshipLabel>
        <relationshipName>Dealer_Product_Mapping_Object</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tally_Item_Description__c</fullName>
        <label>Tally Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Transformation Table</label>
    <nameField>
        <displayFormat>DPM-{000000}</displayFormat>
        <label>Product Transformation Table</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Transformation Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>